# udsdump

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: release.yml
docs/plans/: 2026-02-27-udsdump-design.md  2026-02-27-udsdump-implementation.md
udsdump/: Cargo.toml  build.rs
udsdump-common/: Cargo.toml
udsdump-common/src/: lib.rs
udsdump-ebpf/: Cargo.toml
udsdump-ebpf/src/: main.rs
udsdump/src/: capture.rs  display.rs  filter.rs  list.rs  main.rs  stats.rs  top.rs
