[workspace]
resolver = "2"
members = [
    "udsdump",
    "udsdump-common",
    "udsdump-ebpf",
]
default-members = ["udsdump", "udsdump-common"]

[workspace.package]
license = "MIT OR Apache-2.0"
edition = "2024"

[workspace.dependencies]
aya = { git = "https://github.com/aya-rs/aya", default-features = false }
aya-build = { git = "https://github.com/aya-rs/aya", default-features = false }
aya-ebpf = { git = "https://github.com/aya-rs/aya", default-features = false }
aya-log = { git = "https://github.com/aya-rs/aya", default-features = false }
aya-log-ebpf = { git = "https://github.com/aya-rs/aya", default-features = false }

anyhow = { version = "1", default-features = false }
cargo_metadata = { version = "0.23.0", default-features = false }
clap = { version = "4.5", default-features = false, features = ["std", "derive"] }
env_logger = { version = "0.11", default-features = false }
libc = { version = "0.2", default-features = false }
log = { version = "0.4", default-features = false }
nix = { version = "0.29", default-features = false, features = ["fs", "user"] }
tokio = { version = "1", default-features = false }
which = { version = "6.0", default-features = false }
bytes = { version = "1", default-features = false }

[profile.release.package.udsdump-ebpf]
debug = 2
codegen-units = 1
