[package]
name = "udsdump"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
udsdump-common = { path = "../udsdump-common", features = ["user"] }
anyhow = { workspace = true, default-features = true }
aya = { workspace = true }
aya-log = { workspace = true }
clap = { workspace = true, features = ["derive"] }
env_logger = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
nix = { workspace = true, features = ["fs", "user"] }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "net", "signal", "time"] }
bytes = { workspace = true, default-features = true }

[build-dependencies]
anyhow = { workspace = true }
aya-build = { workspace = true }
cargo_metadata = { workspace = true }
udsdump-ebpf = { path = "../udsdump-ebpf" }

[[bin]]
name = "udsdump"
path = "src/main.rs"
